crates/apollo-compiler/test_data/diagnostics/0094_object_type_extensions.txt
Error: duplicate definitions for the `age` field of object type `UniqueNames`
   ╭─[0094_object_type_extensions.graphql:6:3]
   │
 5 │   age: Int
   │   ─┬─  
   │    ╰─── previous definition of `age` here
 6 │   age: Int
   │   ────┬───  
   │       ╰───── `age` redefined here
───╯
Error: duplicate definitions for the `name` field of object type `ConflictingNames`
    ╭─[0094_object_type_extensions.graphql:13:3]
    │
 10 │   name: String
    │   ──┬─  
    │     ╰─── previous definition of `name` here
    │ 
 13 │   name: String
    │   ──────┬─────  
    │         ╰─────── `name` redefined here
────╯
Error: non-repeatable directive nonRepeatable can only be used once per location
    ╭─[0094_object_type_extensions.graphql:20:29]
    │
 17 │ type UniqueDirective @nonRepeatable {
    │                      ───────┬──────  
    │                             ╰──────── directive `@nonRepeatable` first called here
    │ 
 20 │ extend type UniqueDirective @nonRepeatable {
    │                             ───────┬──────  
    │                                    ╰──────── directive `@nonRepeatable` called again here
────╯
Error: object type `UniqueInterfaces` implements interface `Base` more than once
    ╭─[0094_object_type_extensions.graphql:31:41]
    │
 27 │ type UniqueInterfaces implements Base {
    │                                  ──┬─  
    │                                    ╰─── previous implementation of `Base` here
    │ 
 31 │ extend type UniqueInterfaces implements Base {
    │                                         ──┬─  
    │                                           ╰─── `Base` implemented again here
────╯
Error: type `ExtendedInterface` does not satisfy interface `ExtendedInterface`: missing field `fail`
    ╭─[0094_object_type_extensions.graphql:38:1]
    │
 38 │ ╭─▶ type ImplementsBaseButNotExtension implements ExtendedInterface {
    │ │                                                 ────────┬────────  
    │ │                                                         ╰────────── implementation of interface ExtendedInterface declared here
    ┆ ┆   
 40 │ ├─▶ }
    │ │       
    │ ╰─────── add `fail` field to this type
    │ 
 42 │       fail: Boolean
    │       ──────┬──────  
    │             ╰──────── `ExtendedInterface.fail` originally defined here
    │     
    │     Help: An object or interface must declare all fields required by the interfaces it implements
────╯

